article 2 ready, separate JS files for articles
Now you can 'read' the image !!!
now all function in separate js files and connected to app.js by 'import'

--- a/css/style.css
+++ b/css/style.css
@@ -131,3 +131,14 @@ h6 {
 .encryption__stage-input {
   display: block;
 }
+
+.totext__message {
+  display: none;
+  width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 10px;
+  background: #f1f0f0;
+  border: 3px solid #aaa;
+}
