All tasks - done (exept Ctrl+V)
+Drag'n'Drop for both article
+variable, reusable key

--- a/css/style.css
+++ b/css/style.css
@@ -142,3 +142,14 @@ h6 {
   background: #f1f0f0;
   border: 3px solid #aaa;
 }
+
+.drop-area {
+  border: 2px dashed #ccc;
+  text-align: center;
+  padding: 20px;
+  cursor: pointer;
+}
+
+.drag-over {
+  background-color: #f0f0f0;
+}
