--- a/css/style.css
+++ b/css/style.css
@@ -102,13 +102,22 @@ body {
 
 .container {
   height: inherit;
-  max-width: min(100% - 15px, 75rem);
+  max-width: min(100% - 15px, 1200px);
   margin: 0 auto;
+}
+
+.button__try {
+  padding: 10px 15px;
+  border: 1px solid #999;
+  border-radius: 2px;
 }
 
 .header {
   position: fixed;
-  height: 3.125rem;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  height: 50px;
   width: 100%;
   background-color: #333;
   -webkit-box-shadow: 0px 5px 15px #aaa;
@@ -116,7 +125,6 @@ body {
 }
 
 .header__inner {
-  position: relative;
   height: inherit;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -130,9 +138,6 @@ body {
 }
 
 .logo {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
   z-index: 2;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -143,10 +148,10 @@ body {
 }
 
 .logo__link {
-  height: 2.5rem;
+  height: 40px;
   color: #f00;
   font-size: 2rem;
-  line-height: 2.5rem;
+  line-height: 40px;
 }
 
 .logo__img {
@@ -155,7 +160,6 @@ body {
 
 .menu {
   position: relative;
-  z-index: -50;
   height: inherit;
 }
 
@@ -170,36 +174,51 @@ body {
   -webkit-column-gap: 15px;
      -moz-column-gap: 15px;
           column-gap: 15px;
+  height: inherit;
 }
 
 .menu__item {
-  padding: 0.3125rem 0px;
+  height: inherit;
+  z-index: 2;
   text-align: center;
 }
 
-.menu__link {
-  color: #fff;
+.menu__item:hover .menu__link-covered {
+  -webkit-transform: translate(0, 0);
+      -ms-transform: translate(0, 0);
+          transform: translate(0, 0);
 }
 
-.menu__link-covered {
-  margin: 0 -5px;
-  font-size: 1.5rem;
+.menu__item:hover .menu__link {
+  -webkit-transform: translate(0, 0.75rem);
+      -ms-transform: translate(0, 0.75rem);
+          transform: translate(0, 0.75rem);
+}
+
+.menu__link {
+  font-size: 1rem;
+  color: #fff;
   display: block;
-  background-color: #333;
   position: relative;
-  -webkit-transform: translate(0, 1rem);
-      -ms-transform: translate(0, 1rem);
-          transform: translate(0, 1rem);
+  -webkit-transform: translate(0, 3rem);
+      -ms-transform: translate(0, 3rem);
+          transform: translate(0, 3rem);
   -webkit-transition: -webkit-transform 0.3s ease;
   transition: -webkit-transform 0.3s ease;
   transition: transform 0.3s ease;
   transition: transform 0.3s ease, -webkit-transform 0.3s ease;
 }
 
-.menu__link-covered:hover {
-  -webkit-transform: translate(0, 0%);
-      -ms-transform: translate(0, 0%);
-          transform: translate(0, 0%);
+.menu__link-covered {
+  font-size: 1.2rem;
+  position: relative;
+  -webkit-transform: translate(0, -1.75rem);
+      -ms-transform: translate(0, -1.75rem);
+          transform: translate(0, -1.75rem);
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
 }
 
 .burger {
@@ -277,6 +296,200 @@ body {
   opacity: 0;
 }
 
+.greatings {
+  background-color: #f33;
+}
+
+.greatings__inner {
+  margin-top: 50px;
+  margin-inline: auto;
+  padding: 150px 0 75px;
+  max-width: min(100% - 30px, 600px);
+}
+
+.greatings__title {
+  text-align: center;
+  font-size: 5rem;
+  padding-bottom: 50px;
+}
+
+.greatings__tagline {
+  font-size: 1.5rem;
+  padding-bottom: 30px;
+}
+
+.greatings__button-more {
+  padding: 10px 15px;
+  background-color: transparent;
+  border: 1px solid #999;
+  border-radius: 3px;
+}
+
+.how {
+  background-color: #3f3;
+}
+
+.how__inner {
+  margin-inline: auto;
+  padding: 75px 0;
+}
+
+.title {
+  font-size: 2rem;
+  padding-bottom: 20px;
+}
+
+.subtitle {
+  font-size: 1.3rem;
+}
+
+.why {
+  background-color: #33f;
+}
+
+.why__inner {
+  margin-inline: auto;
+  padding: 75px 0;
+}
+
+.try {
+  background-color: #fa0;
+}
+
+.try__inner {
+  margin-inline: auto;
+  padding: 75px 0;
+}
+
+.encryption {
+  margin-inline: auto;
+  width: min(100% - 50px, 600px);
+  height: 400px;
+  overflow: hidden;
+}
+
+.encryption__inner {
+  background-color: #3f3;
+  height: inherit;
+  position: relative;
+}
+
+.encryption__input-file {
+  display: none;
+}
+
+.drop-area {
+  height: inherit;
+  padding: 20px;
+  background-color: #f33;
+}
+
+.drop-area__inner {
+  height: 100%;
+  padding: 20px;
+  background-color: #33f;
+  border: 1px dotted #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  row-gap: 20px;
+}
+
+.drop-area__img-container {
+  background-color: #222;
+  width: 80px;
+  height: 80px;
+}
+
+.drop-area__img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.drop-area__text {
+  font-size: 2rem;
+  color: #fff;
+}
+
+.option {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.82);
+}
+
+.option__inner {
+  height: 100%;
+}
+
+.option__canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.option__container {
+  height: 100%;
+  padding: 20px;
+}
+
+.option__buttons {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.option__button {
+  width: min(100%, 200px);
+  padding: 15px 25px;
+  color: #fff;
+  font-size: 1.5rem;
+}
+
+.option__encrypt {
+  background-color: rgb(80, 80, 211);
+}
+
+.option__decrypt {
+  background-color: rgb(80, 211, 80);
+}
+
+.option__reset {
+  position: absolute;
+  left: 30px;
+  bottom: 30px;
+  color: #fff;
+  font-size: 1.3rem;
+  line-height: 1.5;
+  text-decoration: underline;
+  background-color: transparent;
+}
+
 @media (min-width: 499.9808px) {
   .burger {
     display: none;
@@ -284,11 +497,15 @@ body {
 }
 
 @media (max-width: 499.9808px) {
+  .logo .logo__link {
+    font-size: 2.5rem;
+  }
+
   .menu {
     position: fixed;
-    top: 3.125rem;
+    top: 50px;
     right: -100vw;
-    height: calc(100vh - 3.125rem);
+    height: calc(100vh - 50px);
     width: 100vw;
     -webkit-transition: right 0.3s ease;
     transition: right 0.3s ease;
@@ -297,7 +514,7 @@ body {
 
   .menu__list {
     position: relative;
-    padding-top: 75px;
+    padding-top: 50px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -305,12 +522,24 @@ body {
   }
 
   .menu__item {
-    margin: 20px 20px;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    margin: 30px 20px;
     text-align: right;
+  }
+
+  .menu__item:hover .menu__link {
+    -webkit-transform: translate(0, 0);
+        -ms-transform: translate(0, 0);
+            transform: translate(0, 0);
   }
 
   .menu__link {
     font-size: 2.5rem;
+    -webkit-transform: translate(0, 0);
+        -ms-transform: translate(0, 0);
+            transform: translate(0, 0);
   }
 
   .menu__link-covered {
