--- a/css/style.css
+++ b/css/style.css
@@ -114,11 +114,12 @@ body {
 
 .header {
   position: fixed;
-  overflow: hidden;
   top: 0;
   left: 0;
+  z-index: 20;
   height: 50px;
   width: 100%;
+  overflow: hidden;
   background-color: #333;
   -webkit-box-shadow: 0px 5px 15px #aaa;
           box-shadow: 0px 5px 15px #aaa;
@@ -297,6 +298,7 @@ body {
 }
 
 .greatings {
+  display: none;
   background-color: #f33;
 }
 
@@ -326,6 +328,7 @@ body {
 }
 
 .how {
+  display: none;
   background-color: #3f3;
 }
 
@@ -344,6 +347,7 @@ body {
 }
 
 .why {
+  display: none;
   background-color: #33f;
 }
 
@@ -353,7 +357,7 @@ body {
 }
 
 .try {
-  background-color: #fa0;
+  background-color: #ff3;
 }
 
 .try__inner {
@@ -362,6 +366,9 @@ body {
 }
 
 .encryption {
+  border-radius: 5px;
+  -webkit-box-shadow: 5px 10px 20px #888;
+          box-shadow: 5px 10px 20px #888;
   margin-inline: auto;
   width: min(100% - 50px, 600px);
   height: 400px;
@@ -378,16 +385,27 @@ body {
   display: none;
 }
 
+.encryption__reset {
+  position: absolute;
+  left: 30px;
+  bottom: 30px;
+  color: #3f3;
+  font-size: 1.3rem;
+  line-height: 1.5;
+  text-decoration: underline;
+  background-color: transparent;
+}
+
 .drop-area {
   height: inherit;
   padding: 20px;
-  background-color: #f33;
+  background-color: #55f;
 }
 
 .drop-area__inner {
   height: 100%;
   padding: 20px;
-  background-color: #33f;
+  background-color: #eee;
   border: 1px dotted #fff;
   border-radius: 5px;
   cursor: pointer;
@@ -431,22 +449,24 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  background-color: #eee;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  -webkit-transform: translate(0, 1000px);
+      -ms-transform: translate(0, 1000px);
+          transform: translate(0, 1000px);
   background-color: rgba(0, 0, 0, 0.82);
 }
 
 .option__inner {
   height: 100%;
+  padding: 20px;
 }
 
 .option__canvas {
   position: absolute;
   top: 0;
   left: 0;
-}
-
-.option__container {
-  height: 100%;
-  padding: 20px;
 }
 
 .option__buttons {
@@ -475,19 +495,110 @@ body {
   background-color: rgb(80, 80, 211);
 }
 
+.option__encrypt:hover {
+  background-color: rgb(69, 69, 182);
+}
+
 .option__decrypt {
   background-color: rgb(80, 211, 80);
 }
 
-.option__reset {
+.option__decrypt:hover {
+  background-color: rgb(69, 182, 69);
+}
+
+.inputs {
   position: absolute;
-  left: 30px;
-  bottom: 30px;
-  color: #fff;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #eee;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  -webkit-transform: translate(0, 1000px);
+      -ms-transform: translate(0, 1000px);
+          transform: translate(0, 1000px);
+}
+
+.inputs__inner {
+  height: 100%;
+  padding: 20px;
+}
+
+.inputs__input-group {
+  position: relative;
+  padding-bottom: 15px;
   font-size: 1.3rem;
+}
+
+.inputs__label {
+  display: block;
+  padding-bottom: 5px;
+}
+
+.inputs__field {
+  font-size: 1em;
+  color: #0f0;
+  padding: 3px 6px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+}
+
+.inputs__available-character {
+  font-size: 0.75em;
+}
+
+.inputs__available-character:not(:last-child) {
+  padding-bottom: 5px;
+}
+
+.inputs__key-input {
+  width: 10ch;
+}
+
+.inputs__key-button {
+  height: 1.75rem;
+  -webkit-transform: translate(0, -3px);
+      -ms-transform: translate(0, -3px);
+          transform: translate(0, -3px);
+  aspect-ratio: 1;
+  background-color: #fff;
+}
+
+.inputs__key-image {
+  width: 80%;
+  height: 80%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.inputs__warning {
+  font-size: 0.75em;
   line-height: 1.5;
-  text-decoration: underline;
-  background-color: transparent;
+  color: #f00;
+}
+
+.result {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #eee;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  -webkit-transform: translate(0, 1000px);
+      -ms-transform: translate(0, 1000px);
+          transform: translate(0, 1000px);
+}
+
+.result__inner {
+  height: 100%;
+  padding: 20px;
 }
 
 @media (min-width: 499.9808px) {
